--- a/notebooks/buildings.ipynb
+++ b/notebooks/buildings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -54,6 +54,391 @@
    "source": [
     "gdf = gpd.read_file(spatial_input_data + 'Building.shp')\n",
     "gdf.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>FACILITYID</th>\n",
+       "      <th>BNAME</th>\n",
+       "      <th>BCAMPUS</th>\n",
+       "      <th>BTYPE</th>\n",
+       "      <th>BUSE</th>\n",
+       "      <th>BSIZE</th>\n",
+       "      <th>BUNITS</th>\n",
+       "      <th>BHOTEL</th>\n",
+       "      <th>STORIES</th>\n",
+       "      <th>OWNERSHIP</th>\n",
+       "      <th>YEARBLT</th>\n",
+       "      <th>GFRETAIL</th>\n",
+       "      <th>COMMENTS</th>\n",
+       "      <th>Shape_STAr</th>\n",
+       "      <th>Shape_STLe</th>\n",
+       "      <th>OBJECTID_1</th>\n",
+       "      <th>SHAPE__Are</th>\n",
+       "      <th>SHAPE__Len</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1726</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Garage or shed</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>none</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19.035156</td>\n",
+       "      <td>17.567937</td>\n",
+       "      <td>POLYGON ((-77.04353 38.79709, -77.04354 38.797...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1727</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Garage or shed</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>none</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2</td>\n",
+       "      <td>68.476562</td>\n",
+       "      <td>34.297091</td>\n",
+       "      <td>POLYGON ((-77.05591 38.79733, -77.05594 38.797...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1728</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Garage or shed</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>none</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3</td>\n",
+       "      <td>46.230469</td>\n",
+       "      <td>27.562058</td>\n",
+       "      <td>POLYGON ((-77.05631 38.79747, -77.05624 38.797...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1729</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Garage or shed</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>none</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28.972656</td>\n",
+       "      <td>21.927440</td>\n",
+       "      <td>POLYGON ((-77.05633 38.79757, -77.05630 38.797...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1730</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Attached structure</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>none</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5</td>\n",
+       "      <td>45.207031</td>\n",
+       "      <td>27.056580</td>\n",
+       "      <td>POLYGON ((-77.04173 38.80010, -77.04173 38.800...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34462</th>\n",
+       "      <td>1</td>\n",
+       "      <td>047058BLDS</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Eisenhower Square</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Residential</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>none</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>34463</td>\n",
+       "      <td>135.402344</td>\n",
+       "      <td>48.537261</td>\n",
+       "      <td>POLYGON ((-77.08215 38.80395, -77.08229 38.803...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34463</th>\n",
+       "      <td>2</td>\n",
+       "      <td>047060BLDS</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Detached structure</td>\n",
+       "      <td>Multiple or Mixed</td>\n",
+       "      <td>373163.0</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>none</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>34464</td>\n",
+       "      <td>13914.937500</td>\n",
+       "      <td>584.770708</td>\n",
+       "      <td>POLYGON ((-77.12825 38.80754, -77.12814 38.807...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34464</th>\n",
+       "      <td>3</td>\n",
+       "      <td>047061BLDS</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Townhouse or row house</td>\n",
+       "      <td>Residential</td>\n",
+       "      <td>2276.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Condo</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>none</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>34465</td>\n",
+       "      <td>102.820312</td>\n",
+       "      <td>43.740926</td>\n",
+       "      <td>POLYGON ((-77.04074 38.81696, -77.04086 38.816...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34465</th>\n",
+       "      <td>6889</td>\n",
+       "      <td>047064BLDS</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Detached house</td>\n",
+       "      <td>Residential</td>\n",
+       "      <td>3344.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>none</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>34466</td>\n",
+       "      <td>363.265625</td>\n",
+       "      <td>80.736196</td>\n",
+       "      <td>POLYGON ((-77.06461 38.81393, -77.06461 38.813...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34466</th>\n",
+       "      <td>4</td>\n",
+       "      <td>047066BLDS</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Garage or shed</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>871.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>none</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>34467</td>\n",
+       "      <td>58.582031</td>\n",
+       "      <td>36.417791</td>\n",
+       "      <td>POLYGON ((-77.04287 38.81451, -77.04287 38.814...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>34467 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       OBJECTID  FACILITYID BNAME            BCAMPUS                   BTYPE  \\\n",
+       "0          1726        None  None               None          Garage or shed   \n",
+       "1          1727        None  None               None          Garage or shed   \n",
+       "2          1728        None  None               None          Garage or shed   \n",
+       "3          1729        None  None               None          Garage or shed   \n",
+       "4          1730        None  None               None      Attached structure   \n",
+       "...         ...         ...   ...                ...                     ...   \n",
+       "34462         1  047058BLDS  None  Eisenhower Square                    None   \n",
+       "34463         2  047060BLDS  None               None      Detached structure   \n",
+       "34464         3  047061BLDS  None               None  Townhouse or row house   \n",
+       "34465      6889  047064BLDS  None               None          Detached house   \n",
+       "34466         4  047066BLDS  None               None          Garage or shed   \n",
+       "\n",
+       "                    BUSE     BSIZE  BUNITS  BHOTEL  STORIES OWNERSHIP  \\\n",
+       "0                  Other       NaN     NaN     NaN      NaN      None   \n",
+       "1                   None       NaN     NaN     NaN      NaN      None   \n",
+       "2                   None       NaN     NaN     NaN      NaN      None   \n",
+       "3                   None       NaN     NaN     NaN      NaN      None   \n",
+       "4                   None       NaN     NaN     NaN      NaN      None   \n",
+       "...                  ...       ...     ...     ...      ...       ...   \n",
+       "34462        Residential       NaN     1.0     NaN      4.0      None   \n",
+       "34463  Multiple or Mixed  373163.0   302.0     NaN      5.0      None   \n",
+       "34464        Residential    2276.0     1.0     NaN      3.0     Condo   \n",
+       "34465        Residential    3344.0     1.0     NaN      2.0      None   \n",
+       "34466              Other     871.0     NaN     NaN      2.0      None   \n",
+       "\n",
+       "       YEARBLT GFRETAIL COMMENTS Shape_STAr Shape_STLe  OBJECTID_1  \\\n",
+       "0          NaN     None     none       None       None           1   \n",
+       "1          NaN     None     none       None       None           2   \n",
+       "2          NaN     None     none       None       None           3   \n",
+       "3          NaN     None     none       None       None           4   \n",
+       "4          NaN     None     none       None       None           5   \n",
+       "...        ...      ...      ...        ...        ...         ...   \n",
+       "34462   2018.0     None     none       None       None       34463   \n",
+       "34463   2019.0      Yes     none       None       None       34464   \n",
+       "34464   2013.0     None     none       None       None       34465   \n",
+       "34465   2018.0       No     none       None       None       34466   \n",
+       "34466   2018.0     None     none       None       None       34467   \n",
+       "\n",
+       "         SHAPE__Are  SHAPE__Len  \\\n",
+       "0         19.035156   17.567937   \n",
+       "1         68.476562   34.297091   \n",
+       "2         46.230469   27.562058   \n",
+       "3         28.972656   21.927440   \n",
+       "4         45.207031   27.056580   \n",
+       "...             ...         ...   \n",
+       "34462    135.402344   48.537261   \n",
+       "34463  13914.937500  584.770708   \n",
+       "34464    102.820312   43.740926   \n",
+       "34465    363.265625   80.736196   \n",
+       "34466     58.582031   36.417791   \n",
+       "\n",
+       "                                                geometry  \n",
+       "0      POLYGON ((-77.04353 38.79709, -77.04354 38.797...  \n",
+       "1      POLYGON ((-77.05591 38.79733, -77.05594 38.797...  \n",
+       "2      POLYGON ((-77.05631 38.79747, -77.05624 38.797...  \n",
+       "3      POLYGON ((-77.05633 38.79757, -77.05630 38.797...  \n",
+       "4      POLYGON ((-77.04173 38.80010, -77.04173 38.800...  \n",
+       "...                                                  ...  \n",
+       "34462  POLYGON ((-77.08215 38.80395, -77.08229 38.803...  \n",
+       "34463  POLYGON ((-77.12825 38.80754, -77.12814 38.807...  \n",
+       "34464  POLYGON ((-77.04074 38.81696, -77.04086 38.816...  \n",
+       "34465  POLYGON ((-77.06461 38.81393, -77.06461 38.813...  \n",
+       "34466  POLYGON ((-77.04287 38.81451, -77.04287 38.814...  \n",
+       "\n",
+       "[34467 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf"
    ]
   }
  ],
